[package]
name = "git-zip"
version = "0.1.0"
edition = "2021"
repository = "https://github.com/klaatu01/git-zip"
description = "Zip only the files that are tracked by git"
documentation = "https://docs.rs/git-zip/0.1.1/git-zip/"
readme = "README.md"
license = "MIT"
keywords = ["git", "zip", "archive", "compress"]

[[bin]]
name = "git-zip"
path = "src/bin/git_zip.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ignore = "0.4.20"
zip = "0.6.6"
